Refactor User Entity and Forms
- Updated User entity to use UniqueEntity constraint for unique fields.
- Removed unnecessary validation constraints from User entity.
- Enhanced UserType form with detailed validation messages and improved layout.
- Added new customer index template for better user management.
- Improved user profile and edit templates for better UX.
- Updated adminbase template to include new links and improved styling.
- Enhanced login template with better styling and CSRF token handling.
- Refactored user show template to display user details in a cleaner format.
- Removed unused user form template.

--- a/.env
+++ b/.env
@@ -43,3 +43,9 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 MAILER_DSN=null://null
 ###< symfony/mailer ###
 
+SESSION_STORAGE_ID=symfony.session.storage.native
+SESSION_HANDLER_ID=symfony.session.handler.native_file
+SESSION_COOKIE_SECURE=auto
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_SAMESITE=lax
+###< symfony/framework-bundle ###
