--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,11 +28,23 @@ security:
 
         
     access_control:
-        - { path: ^/booking, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
-        - { path: ^/room, roles: ['ROLE_ADMIN'] }
-        - { path: ^/customer, roles: ['ROLE_ADMIN'] }
         - { path: ^/login, roles: PUBLIC_ACCESS }
-        - { path: ^/user, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user/profile/edit, roles: ['ROLE_ADMIN','ROLE_STAFF','ROLE_USER'] }
+        - { path: ^/user/customer, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
+        - { path: ^/user/profile, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
+        - { path: ^/booking, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
+        - { path: ^/booking/new, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
+        - { path: ^/room, roles: ['ROLE_ADMIN','ROLE_STAFF'] }
+        - { path: ^/room/new, roles: ['ROLE_ADMIN'] }
+        - { path: ^/room/edit, roles: ['ROLE_ADMIN'] }
+        - { path: ^/room/delete, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user/new, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user/edit, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user/show, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user/delete, roles: ['ROLE_ADMIN'] }
+        - { path: ^/history, roles: ['ROLE_ADMIN'] }
+        - { path: ^/user$, roles: ['ROLE_ADMIN'] }
+      
        
         
 
