--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -8,6 +8,10 @@ framework:
     #esi: true
     #fragments: true
 
+    # Configure trusted proxies for ngrok
+    trusted_proxies: '127.0.0.1,REMOTE_ADDR'
+    trusted_headers: [ 'x-forwarded-for', 'x-forwarded-host', 'x-forwarded-proto', 'x-forwarded-port' ]
+
 when@test:
     framework:
         test: true
